--- a/DoubletRemoval_Scrublet.ipynb
+++ b/DoubletRemoval_Scrublet.ipynb
@@ -52,7 +52,7 @@
     }
    ],
    "source": [
-    "adata_raw = sc.read_10x_mtx('/projects/nehard/SingleCell/Aging/IL7R_HO/Aggregated/RawData/', var_names='gene_symbols', cache=True)\n"
+    "adata_raw = sc.read_10x_mtx('path_to/RawData/', var_names='gene_symbols', cache=True)\n"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "source": [
     "#----- save meta data --> R \n",
     "\n",
-    "adata_raw.obs.to_csv('./Meta/Meta_IL7R_raw_090919.csv')\n"
+    "adata_raw.obs.to_csv('./path_to/Meta_IL7R_raw_090919.csv')\n"
    ]
   },
   {
